--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
             </div>
         </div>
 
+
+
         <div class="row justify-content-center">
+            <div class="col-6 text-center text-light">
+                <h4>Team 1</h4>
+                <div id="teamOneEmojis" class="border border-danger bg-danger rounded-pill p-3 text-light">
+
+                </div>
+            </div>
+            <div class="col-6 text-center text-light">
+                <h4>Team 2</h4>
+                <div id="teamTwoEmojis" class="border border-danger bg-danger rounded-pill p-3 text-light">
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <!-- <div class="row justify-content-center">
             <div class="col-6 text-center text-light">
                 <h4>Team 1</h4>
                 <div id="teamOneEmojis" class="border border-danger bg-danger rounded-pill p-3 text-light">
@@ -45,7 +68,7 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="row">
             <div class="col-6 ">
